--- a/public/css/Component/Agent/Discount_Agent_ValidateUser.css
+++ b/public/css/Component/Agent/Discount_Agent_ValidateUser.css
@@ -43,19 +43,19 @@
 
 
     form {
-        background-color: #fff;
+        background-color: var(--background-color-main);
         padding: 20px;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--box-shadow);
         width: 320px;
-        height: 200px;
+        height: 350px;
         /* Set the width of the form */
     }
 
     form h1 {
         text-align: center;
-        color: #333;
-        margin-bottom: 10px;
+        color: var(--main-text-color);
+        margin-bottom: 76px;
         font-size: 18px;
     }
 
@@ -63,6 +63,8 @@
     label {
         display: block;
         margin-bottom: 8px;
+        color: var(--main-text-color);
+
     }
 
     input {
@@ -95,65 +97,25 @@
 
 
     button {
-        background-color: #1f8134;
-        color: #fff;
-        padding: 10px;
+        background-color: var(--green-color-one);
         border: none;
-        border-radius: 4px;
-        cursor: pointer;
+        border-radius: 10px;
         width: 100%;
-        margin-bottom: 30px;
+        height: 11%;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
     }
 
     button:hover {
-        background-color: #2aa043;
-    }
-
-    .icon {
-        margin-right: 20px;
-    }
-
-    .icon img {
-        border-radius: 50%;
-        height: 100px;
-        width: 100px;
-    }
-
-    .main-bottom-down-content-bottom-one-left .right-content {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .right-content {
-        display: flex;
-    }
-
-    .right-content .description {
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-
-    .right-content .form-upload {
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-
-    .profile-image-validation img {
-        display: none;
-    }
-
-    .main-bottom-down-content-bottom-one-right {
-        display: flex;
-        align-items: center;
+        background-color: var(--green-color-two);
     }
 
 
 
-    .main-bottom-down-content-bottom-content {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        margin-bottom: 8px;
-    }
 
     .form-fields .err {
         height: 10px;
@@ -165,10 +127,6 @@
 
 
 
-    .main-bottom-down-content-bottom-content-three {
-        display: grid;
-        grid-template-columns: 33% 34% 33%;
-    }
 
     .main-bottom-down-content-bottom-button {
         display: flex;
@@ -178,18 +136,17 @@
     }
 
     .main-bottom-down-content-bottom-button button {
-        height: 35px;
-        width: 25%;
-        outline: none;
-        color: white;
-        font-size: 18px;
-        font-weight: 500;
-        border-radius: 5px;
-        cursor: pointer;
+        background-color: var(--green-color-one);
         border: none;
-        letter-spacing: 1px;
-        background: var(--green-color-one);
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        width: 100%;
+        height: 15%;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
     }
 
     .main-bottom-down-content-bottom-button button :hover {
