--- a/public/css/Component/Agent/Discount_Agent_Discount.css
+++ b/public/css/Component/Agent/Discount_Agent_Discount.css
@@ -12,41 +12,13 @@
         margin-top: 3px;
     }
 
-    .main-bottom-down-content-bottom {
-        display: flex;
-        flex-direction: column;
-    }
 
-    .main-bottom-down-content-bottom-one {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        margin-bottom: 8px;
-    }
-
-    .a {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-    }
-
-    .form-drag-area {
-        display: flex;
-        align-items: center;
-        padding: 15px;
-
-    }
-
-    .form-drag-area.active {
-        border: 2px dashed #8888;
-        background-color: #d8d8d8;
-    }
 
     form {
-        background-color: #fff;
+        background-color: var(--background-color-main);
         padding: 20px;
         border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: var(--box-shadow);
         width: 320px;
         height: 350px;
         /* Set the width of the form */
@@ -54,7 +26,7 @@
 
     form h1 {
         text-align: center;
-        color: #333;
+        color: var(--main-text-color);
         margin-bottom: 10px;
         font-size: 18px;
     }
@@ -75,7 +47,7 @@
         width: 100%;
         height: 33px;
         border-radius: 7px;
-        background-color: var(--background-color-two);
+        background-color: var(--background-color-main);
         border: 1px solid #dcdde1;
         font-size: 14px;
         padding-left: 40px;
@@ -84,73 +56,31 @@
     }
 
     button {
-        background-color: #1f8134;
-        color: #fff;
-        padding: 10px;
+        background-color: var(--green-color-one);
         border: none;
-        border-radius: 4px;
-        cursor: pointer;
+        border-radius: 10px;
         width: 100%;
-        margin-top: 2px;
+        height: 11%;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
     }
 
     button:hover {
         background-color: #2aa043;
     }
 
-    .icon {
-        margin-right: 20px;
-    }
-
-    .icon img {
-        border-radius: 50%;
-        height: 100px;
-        width: 100px;
-    }
-
-    .main-bottom-down-content-bottom-one-left .right-content {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .right-content {
-        display: flex;
-    }
-
-    .right-content .description {
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-
-    .right-content .form-upload {
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-
-    .profile-image-validation img {
-        display: none;
-    }
-
-    .main-bottom-down-content-bottom-one-right {
-        display: flex;
-        align-items: center;
-    }
 
 
 
-    .main-bottom-down-content-bottom-content {
-        display: grid;
-        grid-template-columns: 50% 50%;
-        margin-bottom: 8px;
-    }
 
-    .form-fields .err {
-        height: 10px;
-        font-size: 15px;
-        font-weight: 500;
-        margin-bottom: 5px;
-        color: #e74c3c;
-    }
+
+
+
+
 
     .err {
         height: 10px;
@@ -162,19 +92,6 @@
         margin-bottom: 10px;
     }
 
-
-
-    .main-bottom-down-content-bottom-content-three {
-        display: grid;
-        grid-template-columns: 33% 34% 33%;
-    }
-
-    .main-bottom-down-content-bottom-button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 5px;
-    }
 
     .main-bottom-down-content-bottom-button button {
         height: 35px;
@@ -218,5 +135,24 @@
             display: flex;
             flex-direction: column;
         }
+    }
+
+    @media screen and(max-width: 474px) {
+
+        form {
+            width: 110px !important;
+        }
+
+        form h1 {
+
+            font-size: 14px;
+        }
+
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
     }
 }
