--- a/public/css/Component/Agent/Agent_Editprofile.css
+++ b/public/css/Component/Agent/Agent_Editprofile.css
@@ -110,17 +110,20 @@
 
     .main-right-bottom-content {
         width: 70%;
-        height: 95%;
+        height: 120%;
         box-shadow: var(--box-shadow2);
         border-radius: 10px;
-        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
         padding: 10px;
+        margin-top: 16%;
         overflow: hidden !important;
+        margin-bottom: 4%;
     }
 
     .main-right-bottom-content {
         display: grid;
-        grid-template-rows: 10% 90%;
+        grid-template-rows: 15% 85%;
         padding-top: 2%;
     }
 
@@ -146,6 +149,11 @@
         grid-template-columns: 50% 50%;
     }
 
+    .top-profile {
+        display: flex;
+        flex-direction: column;
+    }
+
     .main-right-bottom-content-bottom-left {
         display: flex;
         flex-direction: column;
@@ -155,7 +163,6 @@
     .edit-profile-content-profile {
         display: flex;
         justify-content: center;
-        margin-left: 100%;
         margin-bottom: 29.7px;
     }
 
@@ -180,7 +187,7 @@
     }
 
     .edit-profile-content {
-        margin-bottom: 12px;
+        margin-bottom: 9px;
     }
 
     .edit-profile-content-profile-container input[type=file] {
@@ -203,7 +210,7 @@
 
     .edit-profile-content input {
         height: 28.5px;
-        width: 325px;
+        width: 90%;
         border-radius: 5px;
         border: 1px solid #ccc;
         padding-left: 10px;
@@ -242,7 +249,6 @@
     .main-right-bottom-content-bottom-right {
         display: flex;
         flex-direction: column;
-        padding-top: 169px;
         padding-left: 25px;
     }
 
@@ -379,6 +385,204 @@
             align-items: center;
             padding-left: 5%;
         }
+    }
+
+    @media screen and (max-width: 1200px) {
+        .main-right-bottom {
+            overflow-y: scroll;
+
+        }
+    }
+
+    @media screen and (max-width: 1030px) {
+
+        .main-right-bottom-content-bottom {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .main-right-bottom-content {
+            overflow-y: scroll;
+        }
+
+        .main-right-bottom-content {
+            overflow-y: scroll;
+            height: 150%;
+            margin-top: 85%;
+        }
+
+        .main-right-bottom-content-bottom-right {
+            margin-top: 3%;
+            padding-left: 45px;
+            margin-bottom: 2%;
+        }
+
+        .main-right-bottom-content-bottom-left {
+            margin-top: 3%;
+            padding-left: 45px;
+            margin-bottom: 2%;
+        }
+
+        .main-right-bottom-content-top {
+            padding-left: 45px;
+        }
+
+    }
+
+    @media screen and (max-width: 866px) {
+        .main-right-bottom-content {
+            margin-top: 100%;
+        }
+    }
+
+    @media screen and (max-width: 700px) {
+        .main-right-bottom-content {
+            overflow-y: scroll;
+            height: 150%;
+            margin-top: 125%;
+        }
+
+        .edit-profile-main-image {
+            height: 103px;
+            width: 103px;
+            border-radius: 50%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .edit-profile-second-image {
+            height: 25px;
+            width: 25px;
+            margin-top: -28px;
+            margin-left: 70px;
+            flex: 1;
+        }
+
+        .main-right-bottom-content-delete-account {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 10%;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+        .edit-profile-content-profile {
+            margin-top: 15px;
+        }
+
+        .main-right-bottom-content {
+            overflow-y: scroll;
+            height: 150%;
+            margin-top: 150%;
+        }
+
+        .main-right-bottom-content-bottom-left button {
+            width: 75%;
+        }
+
+        .main-right-bottom-content-bottom-right button {
+            width: 75%;
+        }
+
+        .err1 {
+            font-size: 11px !important;
+            margin-bottom: 5px;
+        }
+
+        .main-right-bottom-content-top h1 {
+            font-size: 18px;
+        }
+
+        .main-right-bottom-content-delete-account-cont {
+            padding: 6px;
+        }
+
+        .main-right-bottom-content-delete-account .fa-trash-can {
+            font-size: 21px;
+
+        }
+
+        .main-right-bottom-content-delete-account p {
+            font-size: 13px;
+        }
+
+        .main-right-bottom-content-bottom-left button {
+            width: 55%;
+            height: 32px;
+            font-size: 13px;
+        }
+
+        .main-right-bottom-content-bottom-right button {
+            width: 55%;
+            height: 32px;
+            font-size: 13px;
+        }
+
+    }
+
+    @media screen and (max-width:802px) {
+
+
+        .popup {
+            width: 350px;
+        }
+
+
+        .popup img {
+            width: 70px;
+        }
+
+        .popup h2 {
+            font-size: 18px;
+        }
+
+        .popup p {
+            font-size: 15px;
+        }
+
+
+        .deletebtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
+        .cancelbtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
+    }
+
+    @media screen and (max-width:466px) {
+
+
+        .popup {
+            width: 320px;
+        }
+
+
+        .popup img {
+            width: 65px;
+        }
+
+        .popup h2 {
+            font-size: 15px;
+        }
+
+        .popup p {
+            font-size: 12px;
+        }
+
+        .deletebtn {
+            width: 100px;
+            font-size: 12px;
+        }
+
+        .cancelbtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
     }
 
 
