--- a/public/css/Component/CenterManager/CenterManager_Main.css
+++ b/public/css/Component/CenterManager/CenterManager_Main.css
@@ -16,6 +16,7 @@
         font-family: 'Inter', sans-serif;
         color: var(--main-text-color);
         background-color: var(--background-color-main);
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
     }
 
     .main-left {
@@ -71,7 +72,7 @@
         width: 100%;
         font-size: 16px;
         align-items: center;
-        margin-bottom: 8%;
+        margin-bottom: 5%;
         cursor: pointer;
     }
 
