--- a/public/css/Component/Customer/Customer_Annoucement.css
+++ b/public/css/Component/Customer/Customer_Annoucement.css
@@ -48,8 +48,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-around;
-        border: 10px;
+        justify-content: end;
         width: 100%;
         box-sizing: border-box;
         height: 42%;
@@ -194,9 +193,45 @@
             width: 100%;
             margin-top: 62px;
             line-height: 1.2rem;
+            overflow: scroll !important;
 
         }
 
+
+
+    }
+
+    @media screen and (max-width: 1040px) {
+
+
+        .main-right-bottom {
+
+            .cont h2 {
+                font-size: 18px;
+                letter-spacing: 0.01rem;
+            }
+
+            .cont p {
+                font-size: 14px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 900px) {
+
+
+        .main-right-bottom .cont {
+            height: auto;
+        }
+
+        .main-right-bottom {
+            .cont {
+                padding: 30px;
+                box-sizing: border-box;
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
 
 }
