--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -309,7 +309,7 @@
 
             .Waste_Amounts .Cont p {
                 margin: 14px 0px;
-                font-size: 14px !important;
+                font-size: 14px;
             }
 
             .Waste_Amounts .icon {
@@ -654,6 +654,192 @@
                 box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
             }
         }
+
+        @media screen and (max-width:1190px) {
+            .main-bottom-component {
+                width: 90% !important;
+            }
+
+            .Content-Content h2 {
+                font-size: 14px !important;
+            }
+
+            .Content-Content p {
+                font-size: 13px !important;
+            }
+
+            .Content-Content input {
+                font-size: 12px !important;
+            }
+
+            .Content-Content select {
+                font-size: 14px !important;
+            }
+
+            .Content-Content select option {
+                font-size: 14px !important;
+            }
+
+            .err {
+                font-size: 12px !important;
+            }
+
+            .Waste_Amounts .Cont h3 {
+                font-size: 14px !important;
+            }
+
+            .Waste_Amounts .Cont p {
+                font-size: 13px !important;
+            }
+
+            .Waste_Amounts .icon {
+                font-size: 21px !important;
+            }
+
+            .Warning_Message {
+                font-size: 13.5px !important;
+            }
+        }
+
+        @media screen and (max-width:1024px) {
+            .map_pop {
+                display: flex;
+                position: fixed;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) scale(0);
+                z-index: 4;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                overflow: hidden;
+                transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+                box-shadow: var(--box-shadow);
+                border-radius: 10px;
+                width: 100%;
+                height: 100%;
+            }
+
+            .map_pop h3 {
+                font-size: 17px;
+            }
+
+            .map_pop p {
+                font-size: 13px;
+                width: 300px;
+            }
+
+            #map {
+                width: 78%;
+                height: 55%;
+                padding: 10px;
+                border-radius: 10px;
+                padding: 20px;
+                padding-bottom: 40px;
+            }
+
+            .buttons-container {
+                display: flex;
+                justify-content: space-around;
+                margin-top: 5px;
+                width: 70%;
+            }
+
+            #markLocationBtn,
+            #cancelBtn {
+                width: 100px;
+                font-size: 14px;
+            }
+
+            #markLocationBtn {
+                background-color: #3498db;
+                color: #fff;
+                width: 100px;
+                font-size: 14px;
+            }
+
+            #cancelBtn {
+                background-color: #F13E3E;
+                color: #fff;
+            }
+        }
+
+        @media screen and (max-width:842px) {
+
+            .map_pop h3 {
+                font-size: 15px;
+                width: 200px;
+                text-align: center;
+            }
+
+            .map_pop p {
+                font-size: 12px;
+                width: 300px;
+                text-align: center;
+            }
+
+            #markLocationBtn,
+            #cancelBtn {
+                width: 100px;
+                font-size: 14px;
+            }
+
+            #markLocationBtn {
+                background-color: #3498db;
+                color: #fff;
+                width: 100px;
+                font-size: 14px;
+            }
+
+            #cancelBtn {
+                background-color: #F13E3E;
+                color: #fff;
+            }
+
+
+        }
+
+        @media screen and (max-width:562px) {
+            .Content {
+                display: flex !important;
+                flex-direction: column !important;
+                height: 100%;
+            }
+
+            .main-bottom {
+                height: 100%;
+                padding-top: 15%;
+            }
+
+            .map-cont {
+                width: 80%;
+            }
+
+            .main-bottom-component {
+                height: 110%;
+            }
+
+            .Waste_Amounts .Cont h3 {
+                font-size: 12px !important;
+            }
+
+            .Waste_Amounts .Cont p {
+                font-size: 12px !important;
+            }
+
+            .Waste_Amounts .icon {
+                font-size: 16px !important;
+            }
+
+            .Warning_Message {
+                font-size: 12px !important;
+            }
+
+            .X h2 {
+                margin-right: 0px !important;
+            }
+        }
     }
+
 
 }
