--- a/public/css/Component/Collector/Collector_Request_Top.css
+++ b/public/css/Component/Collector/Collector_Request_Top.css
@@ -228,6 +228,10 @@
         cursor: pointer;
     }
 
+    .main-right-top-four-component p{
+        color:var(--background-color-right) ;
+    }
+
     .main-right-bottom {
         box-sizing: border-box;
         
