--- a/public/css/Component/Collector/Collector_Dashboard.css
+++ b/public/css/Component/Collector/Collector_Dashboard.css
@@ -218,6 +218,7 @@
         padding: 12px;
         box-sizing: border-box;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
@@ -288,6 +289,14 @@
         width: 100%;
         height: 45%;
     }
+    
+    .message {
+        display: none;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        font-size: 15px;
+    }
 
     .main-right-bottom-one-right {
         width: 48%;
@@ -297,6 +306,17 @@
         background-color: var(--background-color-main);
         box-shadow: var(--box-shadow);
     }
+
+    
+    .empty-transaction {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 13%;
+        font-size: 15px;
+    }
+
 
     .main-right-bottom-one-right h1 {
         font-size: 18px;
