--- a/public/css/Component/CenterManager/CenterManager_Request_Completed.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Completed.css
@@ -77,7 +77,7 @@
         height: 35px !important;
         border-radius: 50%;
         cursor: pointer;
-      }
+    }
 
 
     /*Location popup*/
@@ -214,7 +214,7 @@
         box-shadow: var(--form-box-shadow);
         border-radius: 10px;
         padding: 10px 40px;
-        height: 350px;
+        height: 400px;
     }
 
     .collect-details-pop-form-content span {
@@ -252,7 +252,7 @@
     .collect-details-pop-form-content-right-values-cont {
         display: flex;
         margin-bottom: 11%;
-        
+
     }
 
     .collect-details-pop-form-content-right-values h3 {
@@ -260,7 +260,13 @@
         color: #767e95;
         font-weight: 550;
         overflow: auto;
-        
+
+    }
+
+    .note {
+        max-width: 500px;
+        height: 35px;
+        overflow-y: scroll;
     }
 
     /*Collector info*/
@@ -463,7 +469,7 @@
 
     /*request details*/
     .request-details-pop {
-       
+
         display: flex;
         position: fixed;
         top: 50%;
@@ -601,192 +607,192 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-      }
-    
-    
-    
+    }
+
+
+
     .confirm-garbage-popup-box {
         .confirm-garbage-popup-form {
-          width: 45%;
-          background: var(--background-color-main);
-          border-radius: 6px;
-          position: relative;
-          text-align: center;
-          padding: 40px;
-          color: var(--main-text-color);
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          transition: transform 0.4s, top 0.4s;
-          box-shadow: var(--form-box-shadow);
+            width: 45%;
+            background: var(--background-color-main);
+            border-radius: 6px;
+            position: relative;
+            text-align: center;
+            padding: 40px;
+            color: var(--main-text-color);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            transition: transform 0.4s, top 0.4s;
+            box-shadow: var(--form-box-shadow);
         }
-    
-        .form-title {
-          font-size: 20px;
-          font-weight: 500;
-          position: relative;
-          margin-bottom: 20px;
-        }
-    
-        .form-title::before {
-          content: '';
-          position: absolute;
-          height: 3px;
-          width: 57px;
-          background: var(--green-color-one);
-          margin-top: 25px;
-          margin-bottom: 5px;
-        }
-    
-        .form-container {
-          width: 100%;
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: space-between;
-        }
-    
-        .user-details {
-          width: 100%;
-          display: flex;
-          justify-content: space-between;
-          flex-wrap: wrap;
-    
-        }
-    
-        .main-right-bottom-content-content {
-          width: 300px;
-          /* margin-bottom: 20px; */
-          position: relative;
-        }
-    
-        .details {
-          display: block;
-          font-weight: 500;
-          margin-bottom: 5px;
-          text-align: left;
-          font-size: 15px;
-    
-        }
-    
-        .input-container {
-          position: relative;
-          margin-bottom: 20px;
-        }
-    
-        .wide-note {
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          margin-bottom: 20px;
-        }
-    
-        .wide-note .main-right-bottom-content-content {
-          width: calc(100% - 4px);
-        }
-    
-        .note-input {
-          width: calc(100% - 44px);
-          height: 200px;
-          padding-left: 20px;
-          padding-right: 2px;
-        }
-    
-        .icon {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          left: 10px;
-          color: #555;
-        }
-    
-        .error-div {
-          color: red;
-          font-size: 0.8em;
-          margin-top: 4px;
-          margin-bottom: 4px;
-          text-align: left;
-          position: absolute;
-          bottom: -20px;
-          left: 0;
-        }
-    
-        .main-right-bottom-content-content input {
-          height: 35px;
-          width: 85%;
-          outline: none;
-          border-radius: 5px;
-          border: 1px solid #ccc;
-          padding-left: 35px;
-          font-size: 14px;
-          transition: all 0.3s ease;
-          background-color: var(--background-color-main);
-          color: var(--main-text-color);
-        }
-    
-        .main-right-bottom-content-content input:focus {
-          border-color: #4dccaa;
-        }
-    
-        .wide-note input {
-          width: 94%;
-        }
-    
-        .form-button {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          height: 50px;
-        }
-    
-        .a {
-          height: auto !important;
-        }
-    
-        .form-button button[type="submit"] {
-          height: 40px;
-          outline: none;
-          width: 50%;
-          color: var(--background-color-main);
-          font-size: 17px;
-          font-weight: 500;
-          border-radius: 5px;
-          cursor: pointer;
-          border: none;
-          letter-spacing: 1px;
-          background: var(--green-color-one);
-          padding: 0 20px;
-        }
-    
-        .form-button button[type="submit"]:hover {
-          background: var(--button-hover-green);
-        }
-    
-        .cancel-button {
-          width: 50%;
-          height: 40px;
-          outline: none;
-          color: white;
-          font-size: 17px;
-          font-weight: 500;
-          border-radius: 5px;
-          cursor: pointer;
-          border: none;
-          letter-spacing: 1px;
-          background: #bab3b3;
-          padding: 0 15px;
-          margin-left: 45px;
-    
-        }
-    
-        .cancel-button:hover {
-            background: #a7a1a1 ;
-        }
-    
-      }
 
-      /*Success popup*/
-      .request_success {
+        .form-title {
+            font-size: 20px;
+            font-weight: 500;
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        .form-title::before {
+            content: '';
+            position: absolute;
+            height: 3px;
+            width: 57px;
+            background: var(--green-color-one);
+            margin-top: 25px;
+            margin-bottom: 5px;
+        }
+
+        .form-container {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        .user-details {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+
+        }
+
+        .main-right-bottom-content-content {
+            width: 300px;
+            /* margin-bottom: 20px; */
+            position: relative;
+        }
+
+        .details {
+            display: block;
+            font-weight: 500;
+            margin-bottom: 5px;
+            text-align: left;
+            font-size: 15px;
+
+        }
+
+        .input-container {
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        .wide-note {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .wide-note .main-right-bottom-content-content {
+            width: calc(100% - 4px);
+        }
+
+        .note-input {
+            width: calc(100% - 44px);
+            height: 200px;
+            padding-left: 20px;
+            padding-right: 2px;
+        }
+
+        .icon {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 10px;
+            color: #555;
+        }
+
+        .error-div {
+            color: red;
+            font-size: 0.8em;
+            margin-top: 4px;
+            margin-bottom: 4px;
+            text-align: left;
+            position: absolute;
+            bottom: -20px;
+            left: 0;
+        }
+
+        .main-right-bottom-content-content input {
+            height: 35px;
+            width: 85%;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 35px;
+            font-size: 14px;
+            transition: all 0.3s ease;
+            background-color: var(--background-color-main);
+            color: var(--main-text-color);
+        }
+
+        .main-right-bottom-content-content input:focus {
+            border-color: #4dccaa;
+        }
+
+        .wide-note input {
+            width: 94%;
+        }
+
+        .form-button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 50px;
+        }
+
+        .a {
+            height: auto !important;
+        }
+
+        .form-button button[type="submit"] {
+            height: 40px;
+            outline: none;
+            width: 50%;
+            color: var(--background-color-main);
+            font-size: 17px;
+            font-weight: 500;
+            border-radius: 5px;
+            cursor: pointer;
+            border: none;
+            letter-spacing: 1px;
+            background: var(--green-color-one);
+            padding: 0 20px;
+        }
+
+        .form-button button[type="submit"]:hover {
+            background: var(--button-hover-green);
+        }
+
+        .cancel-button {
+            width: 50%;
+            height: 40px;
+            outline: none;
+            color: white;
+            font-size: 17px;
+            font-weight: 500;
+            border-radius: 5px;
+            cursor: pointer;
+            border: none;
+            letter-spacing: 1px;
+            background: #bab3b3;
+            padding: 0 15px;
+            margin-left: 45px;
+
+        }
+
+        .cancel-button:hover {
+            background: #a7a1a1;
+        }
+
+    }
+
+    /*Success popup*/
+    .request_success {
         position: fixed;
         top: 0;
         left: 0;
@@ -849,7 +855,7 @@
 
     }
 
-    #maps{
+    #maps {
         cursor: not-allowed;
     }
 
@@ -857,7 +863,7 @@
 
 
     @media screen and (max-width: 1332px) {
-       
+
 
         .confirm-garbage-popup-box {
 
@@ -866,259 +872,261 @@
                 margin-bottom: 0;
             }
 
-            .wide-note input{
+            .wide-note input {
                 width: 91%;
                 margin-left: -12px;
             }
 
-            .main-right-bottom-content-content input{
+            .main-right-bottom-content-content input {
                 width: 160%;
             }
 
-            .A input{
+            .A input {
                 width: 91%;
                 margin-left: -12px;
             }
 
-            .confirm-garbage-popup-form{
+            .confirm-garbage-popup-form {
                 padding: 20px 40px;
             }
         }
-        
+
     }
 
-    @media screen and (max-width: 1108px ){
-        .location_pop_content{
+    @media screen and (max-width: 1108px) {
+        .location_pop_content {
             width: 600px;
         }
 
         .confirm-garbage-popup-box {
 
-            .main-right-bottom-content-content input{
+            .main-right-bottom-content-content input {
                 width: 140%;
             }
 
-            .A input{
+            .A input {
                 width: 91%;
                 margin-left: -12px;
             }
 
-          
+
         }
 
-       
 
-        
+
+
     }
 
-    @media screen and (max-width: 950px ){
-        .location_pop_content{
+    @media screen and (max-width: 950px) {
+        .location_pop_content {
             width: 500px;
         }
 
-        .personal-details-popup-form{
+        .personal-details-popup-form {
             width: 600px;
         }
 
         .confirm-garbage-popup-box {
-            
-            .main-right-bottom-content-content input{
+
+            .main-right-bottom-content-content input {
                 width: 120%;
             }
 
-            .A input{
+            .A input {
                 width: 91%;
                 margin-left: -12px;
             }
 
-            .cancel-button{
+            .cancel-button {
                 margin-left: 20px;
             }
 
-            .form-button{
+            .form-button {
                 width: 75%;
             }
 
-          
+
 
         }
 
-      
-        
-        
+
+
+
     }
 
-    @media screen and (max-width: 862px ){
-        .location_pop_content{
+    @media screen and (max-width: 862px) {
+        .location_pop_content {
             width: 400px;
         }
 
-        .personal-details-popup-form{
+        .personal-details-popup-form {
             width: 500px;
         }
 
-        .request-details-pop-form{
+        .request-details-pop-form {
             width: 450px;
         }
 
         .confirm-garbage-popup-box {
-            
-            .main-right-bottom-content-content input{
+
+            .main-right-bottom-content-content input {
                 width: 100%;
             }
 
-            .A input{
+            .A input {
                 width: 91%;
                 margin-left: -12px;
             }
 
-          
+
 
         }
 
-    
+
     }
 
-    @media screen and (max-width: 700px ){
-        .location_pop_content{
+    @media screen and (max-width: 700px) {
+        .location_pop_content {
             width: 300px;
         }
 
-        .request-details-pop-form{
+        .request-details-pop-form {
             width: 400px;
         }
 
-        .request-details-right-labels span{
+        .request-details-right-labels span {
             font-size: 12px;
         }
 
-        .request-details-right-values span{
+        .request-details-right-values span {
             font-size: 12px;
         }
-        
-        .cancel-confirm-content{
+
+        .cancel-confirm-content {
             width: 400px;
         }
 
         .confirm-garbage-popup-box {
-            
-            .main-right-bottom-content-content input{
+
+            .main-right-bottom-content-content input {
                 width: 100%;
             }
 
-            .A input{
+            .A input {
                 width: 91%;
                 margin-left: -12px;
             }
 
-          
+
 
         }
 
-        .popup{
+        .popup {
             width: 300px;
         }
     }
 
     @media screen and (max-width:660px) {
-        .personal-details-popup-form{
+        .personal-details-popup-form {
             width: 400px;
         }
 
-        .personal-details-left img{
+        .personal-details-left img {
             width: 100px;
             height: 100px;
         }
 
-        .personal-details-right-labels span, .personal-details-right-values span, .personal-details-left p{
+        .personal-details-right-labels span,
+        .personal-details-right-values span,
+        .personal-details-left p {
             font-size: 12px;
         }
 
-        .collect-details-pop-form{
+        .collect-details-pop-form {
             width: 450px;
         }
 
         .confirm-garbage-popup-box {
-            
-            .main-right-bottom-content-content input{
+
+            .main-right-bottom-content-content input {
                 width: 80%;
                 margin-left: -12px;
             }
 
-            .A input{
+            .A input {
                 width: 85%;
                 margin-left: -3px;
             }
 
-          
+
 
         }
-      
+
     }
 
     @media screen and (max-width:588px) {
         .confirm-garbage-popup-box {
-            
-            .main-right-bottom-content-content input{
+
+            .main-right-bottom-content-content input {
                 width: 60%;
                 margin-left: -80px;
             }
 
-            .A input{
+            .A input {
                 width: 60%;
-                
+
             }
 
-          
+
 
         }
 
     }
 
-    
+
     @media screen and (max-width:500px) {
-        .request-details-right-labels{
+        .request-details-right-labels {
             padding-left: 16px;
         }
 
-        .request-details-right-values{
+        .request-details-right-values {
             padding-left: 70px;
         }
 
-        .request-details-pop-form{
+        .request-details-pop-form {
             width: 300px;
         }
 
-        .collect-details-pop-form{
+        .collect-details-pop-form {
             width: 400px;
         }
 
-        .collect-details-pop-form-content-labels h3{
+        .collect-details-pop-form-content-labels h3 {
             font-size: 12px;
             margin-left: 40%;
         }
 
-        .collect-details-pop-form-content-right-values h3{
+        .collect-details-pop-form-content-right-values h3 {
             font-size: 12px;
         }
 
         .confirm-garbage-popup-box {
-            
-            .main-right-bottom-content-content input{
+
+            .main-right-bottom-content-content input {
                 width: 60%;
                 margin-left: -80px;
             }
 
-            .A input{
+            .A input {
                 width: 60%;
-                
+
             }
 
-          
+
 
         }
 
-        .popup{
+        .popup {
             width: 300px;
         }
 
