--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -92,17 +92,13 @@
 
 
    
-    @media screen and (max-width: 1108px ){
-        .location_pop_content{
-            width: 600px;
-        }
-
+    @media screen and (max-width: 1118px) {
         .table td {
             font-size: 12px;
         }
     
         .table-header {
-            font-size: 12px;
+            font-size: 14px;
         }
     
         .table-row img {
@@ -113,10 +109,13 @@
         .main-right-top-search {
             margin-left: 40px;
         }
-
-        
-        
+    
+        .location_pop_content {
+            width: 550px;
+        }
     }
+
+ 
 
     @media screen and (max-width: 950px ){
         .location_pop_content{
@@ -165,13 +164,6 @@
             height: 2px;
         }
 
-        .main-right-top-notification {
-            margin-left: 5%;
-        }
-    
-        .main-right-top-search {
-            margin-left: 1px;
-        }
     
         .main-right-bottom-container {
             width: 100%;
@@ -189,6 +181,56 @@
         }
     
 
+    
+    }
+
+
+
+    @media screen and (max-width: 844px) {
+        .main-right-top-notification {
+          margin-left: 5%;
+        }
+    
+        .main-right-top-search {
+          margin-left: 1px;
+        }
+    
+        .main-right-bottom-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+    
+        .main-right-bottom-container-top {
+            width: 140%;
+            overflow-x: scroll;
+        }
+    
+        .main-right-bottom-container-container {
+            width: 140%;
+            overflow-x: scroll;
+        }
+    
+    
+    
+    
+        .main-right-bottom-two-content h1 {
+            font-size: 15px;
+            text-align: center;
+        }
+    
+        .main-right-bottom-two-content p {
+            font-size: 15px;
+        }
+    
+        .main-right-bottom-two-content button {
+            height: 30px;
+            width: 145px;
+            font-size: 15px;
+        }
+        .request-details-pop-form{
+          width: 450px;
+      }
+    
     
     }
 
@@ -213,7 +255,32 @@
     }
 
     
-    @media screen and (max-width:500px) {
+   
+    @media screen and (max-width:650px) {
+
+        .main-right-bottom {
+            width: 120% !important;
+        }
+    
+        .main-right-bottom-top {
+            width: 120% !important;
+        }
+    
+        .main-right-bottom-down {
+            width: 120% !important;
+        }
+    
+        .table-header {
+            grid-template-columns: 11% 12% 14% 11% 11% 11% 14%;
+        }
+    
+        .table-row {
+            grid-template-columns: 11% 12% 14% 11% 11% 11% 14%;
+        }
+    }
+    
+    @media screen and (max-width:555px) {
+
         .request-details-right-labels{
             padding-left: 16px;
         }
@@ -227,9 +294,29 @@
         }
 
     
-
+        
+        .main-right-bottom {
+            width: 190% !important;
+        }
+    
+        .main-right-bottom-top {
+            width: 190% !important;
+        }
+    
+        .main-right-bottom-down {
+            width: 190% !important;
+        }
+    
+        .table-header {
+            grid-template-columns: 6% 12% 12% 9% 9% 9% 9%;
+        }
+    
+        .table-row {
+            grid-template-columns:  6% 12% 12% 9% 9% 9% 9%;
+        }
+    
     }
-
+    
 
 
 
