--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -824,6 +824,8 @@
     .location_pop_content {
         width: 550px;
     }
+
+ 
 }
 
 
@@ -884,27 +886,29 @@
 
 }
 
+
+
 @media screen and (max-width: 844px) {
     .main-right-top-notification {
-        margin-left: 5%;
+      margin-left: 5%;
     }
 
     .main-right-top-search {
-        margin-left: 1px;
+      margin-left: 1px;
     }
 
     .main-right-bottom-container {
-        width: 100%;
+        width: 140%;
         overflow-x: scroll;
     }
 
     .main-right-bottom-container-top {
-        width: 100%;
+        width: 140%;
         overflow-x: scroll;
     }
 
     .main-right-bottom-container-container {
-        width: 100%;
+        width: 140%;
         overflow-x: scroll;
     }
 
@@ -1011,5 +1015,64 @@
   }
     
 }
+@media screen and (max-width:650px) {
 
+  .main-right-bottom {
+      width: 120% !important;
+  }
+
+  .main-right-bottom-top {
+      width: 120% !important;
+  }
+
+  .main-right-bottom-down {
+      width: 120% !important;
+  }
+
+  .table-header {
+      grid-template-columns: 11% 12% 14% 11% 11% 11% 14%;
+  }
+
+  .table-row {
+      grid-template-columns: 11% 12% 14% 11% 11% 11% 14%;
+  }
+}
+
+@media screen and (max-width:555px) {
+
+  .request-details-right-labels{
+      padding-left: 16px;
+  }
+
+  .request-details-right-values{
+      padding-left: 70px;
+  }
+
+  .request-details-pop-form{
+      width: 300px;
+  }
+
+
+  
+  .main-right-bottom {
+      width: 140% !important;
+  }
+
+  .main-right-bottom-top {
+      width: 140% !important;
+  }
+
+  .main-right-bottom-down {
+      width: 140% !important;
+  }
+
+  .table-header {
+      grid-template-columns: 6% 12% 12% 9% 9% 9% 9%;
+  }
+
+  .table-row {
+      grid-template-columns:  6% 12% 12% 9% 9% 9% 9%;
+  }
+
+}
 }
