--- a/public/css/Component/CenterManager/CenterManager_Center_Garbage_Stock.css
+++ b/public/css/Component/CenterManager/CenterManager_Center_Garbage_Stock.css
@@ -58,6 +58,8 @@
     justify-content: center;
     width: 35%;
     position: relative;
+    visibility: hidden;
+
   }
 
   .main-right-top-search i {
